knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinical_Rate_Change__c/Clinical_Rate_Change__c.object-meta.xml
<CustomObject>
    <label>Clinical Rate Change</label>
    <nameField>
        <displayFormat>A-{000000}</displayFormat>
        <label>Clinical Rate Change Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Clinical Rate Change</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>