knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinical_Rate_Change__c/fields/Contract_ID__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID__c</fullName>
    <description>stores the Contract Id of user selected Contract.</description>
    <label>Contract ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>