knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinical_Rate_Change__c/fields/ContractsForPostProcessing__c.field-meta.xml
<CustomField>
    <fullName>ContractsForPostProcessing__c</fullName>
    <description>Comma-separated contract IDs for whom rate change emails were sent during post-process.</description>
    <label>Contracts For Post Processing</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>