knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinical_Rate_Change__c/fields/DocGenerationBatchProcessId__c.field-meta.xml
<CustomField>
    <fullName>DocGenerationBatchProcessId__c</fullName>
    <description>used to capture the DocGenerationBatchProcessId</description>
    <label>DocGenerationBatchProcessId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>