knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinical_Rate_Change__c/fields/Non_Processed_Clinical_Ids__c.field-meta.xml
<CustomField>
    <fullName>Non_Processed_Clinical_Ids__c</fullName>
    <description>In account-management-agent: comma-separated contract IDs selected by user in draft contracts table for post-processing.</description>
    <label>Non Processed Clinical Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>