knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinical_Rate_Change__c/fields/PreviewClonedContractIds__c.field-meta.xml
<CustomField>
    <fullName>PreviewClonedContractIds__c</fullName>
    <description>Used to capture the Clone contracts via preview code(can be max 2 ids based on professional Title).</description>
    <label>PreviewClonedContractIds</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>