knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinical_Rate_Change__c/fields/Service_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Account_ID__c</fullName>
    <description>stores the Id of user selected Facility</description>
    <label>Service Account ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>