knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Clinical_Rate_Change__c/fields/user_selected_IDs__c.field-meta.xml
<CustomField>
    <fullName>user_selected_IDs__c</fullName>
    <description>stores the Ids of Clinicians along with isProcessed attribute in JSON format</description>
    <label>user selected IDs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>